# lveq

./: LICENSE  README.md  lveq.cabal  stack.yaml
src/: .Main.hs.swp  .Spec.hs.swp  DAG.hs  Equivalence.hs  Interface.hs  Spec.hs
